import org.gradle.external.javadoc.StandardJavadocDocletOptions

plugins {
    java
    alias(libs.plugins.maven.publish)
    alias(libs.plugins.spotless)
    alias(libs.plugins.openrewrite)
}

// Global properties for all modules
group = "io.github.higher-kinded-j"
version = project.findProperty("projectVersion")?.toString() ?: "0.2.2-SNAPSHOT"


// Repositories for root project (required for OpenRewrite dependencies)
repositories {
    mavenCentral()
}
// OpenRewrite configuration for the root project
rewrite {
    activeRecipe("com.higherkindedj.ShortenFullyQualifiedTypeReferencesJavaOnly")
    failOnDryRunResults = true  // CI enforcement
}


// Modules that use java-platform instead of java-library
val platformModules = setOf("hkj-bom")

// Configure all submodules
subprojects {
    group = rootProject.group
    version = rootProject.version

    // Apply necessary plugins to each submodule (skip java-library for platform modules)
    if (project.name !in platformModules) {
        plugins.apply("java-library")
    }
    plugins.apply("com.diffplug.spotless")

    // Set Java version for all submodules with Java sources
    if (project.name !in platformModules) {
        java {
            toolchain {
                languageVersion.set(JavaLanguageVersion.of(25))
            }
        }
    }

    repositories {
        mavenCentral()
        gradlePluginPortal()
    }

    tasks.withType<JavaCompile>().configureEach {
        options.compilerArgs.addAll(listOf("-Xmaxerrs", "10000", "--enable-preview"))
    }

    tasks.withType<Test>().configureEach {
        jvmArgs("--enable-preview")
    }

    tasks.withType<JavaExec>().configureEach {
        jvmArgs("--enable-preview")
    }

    tasks.withType<Javadoc>().configureEach {
        (options as StandardJavadocDocletOptions).addBooleanOption("-enable-preview", true)
        (options as StandardJavadocDocletOptions).addStringOption("source", "25")
    }

    // Apply Spotless configuration to all java sources in subprojects
    spotless {
        lineEndings = com.diffplug.spotless.LineEnding.UNIX
        java {
            target("src/**/*.java")
            googleJavaFormat(libs.versions.google.java.format.get()).formatJavadoc(true)
            removeUnusedImports()
            trimTrailingWhitespace()
            licenseHeaderFile(rootProject.file("config/spotless/copyright.txt"), "(package|import|public|@)")
        }
    }
}

// =============================================================================
// Custom Tasks
// =============================================================================

/**
 * Full benchmark validation task.
 *
 * Runs the complete benchmark pipeline:
 * 1. VTask and Par unit tests (hkj-core)
 * 2. JaCoCo coverage report
 * 3. JMH benchmarks
 * 4. Benchmark assertion tests
 *
 * Usage: ./gradlew benchmarkValidation
 *
 * Note: This is separate from the regular test task as it takes several minutes.
 */
tasks.register("benchmarkValidation") {
    group = "verification"
    description = "Runs full benchmark validation: tests, coverage, JMH benchmarks, and assertions"

    dependsOn(":hkj-core:test")
    dependsOn(":hkj-core:jacocoTestReport")
    dependsOn(":hkj-benchmarks:jmh")
    dependsOn(":hkj-benchmarks:test")

    // Ensure proper ordering
    tasks.findByPath(":hkj-core:jacocoTestReport")?.mustRunAfter(":hkj-core:test")
    tasks.findByPath(":hkj-benchmarks:jmh")?.mustRunAfter(":hkj-core:jacocoTestReport")
    tasks.findByPath(":hkj-benchmarks:test")?.mustRunAfter(":hkj-benchmarks:jmh")

    doLast {
        println("\n" + "=".repeat(70))
        println("  BENCHMARK VALIDATION COMPLETE")
        println("=".repeat(70))
        println("\nReports generated:")
        println("  - JaCoCo:     hkj-core/build/reports/jacoco/test/html/index.html")
        println("  - JMH JSON:   hkj-benchmarks/build/reports/jmh/results.json")
        println("  - JMH Human:  hkj-benchmarks/build/reports/jmh/human.txt")
        println("\nRun './gradlew :hkj-benchmarks:benchmarkSummary' for a quick results overview.")
    }
}

/**
 * Release readiness quality gate.
 *
 * Runs all verification steps from fastest to slowest, failing fast
 * on the cheapest checks first:
 *
 * 1. spotlessCheck       — code formatting (seconds)
 * 2. build               — compile + unit tests + JaCoCo (minutes)
 * 3. jmh                 — JMH benchmarks (minutes)
 * 4. benchmark tests     — benchmark assertion tests (seconds, requires jmh)
 * 5. pitest (full)       — mutation testing with STRONGER mutators (slowest)
 *
 * Usage: ./gradlew releaseReadiness
 *
 * This is the essential quality gate before any release. All steps must pass.
 */
tasks.register("releaseReadiness") {
    group = "verification"
    description = "Release quality gate: spotless, build, benchmarks, benchmark assertions, pitest (full profile)"

    dependsOn("spotlessCheck")
    dependsOn("build")
    dependsOn(":hkj-benchmarks:jmh")
    dependsOn(":hkj-benchmarks:test")
    dependsOn("pitestFull")

    // Enforce fast-to-slow ordering
    tasks.findByPath("build")?.mustRunAfter("spotlessCheck")
    tasks.findByPath(":hkj-benchmarks:jmh")?.mustRunAfter("build")
    tasks.findByPath(":hkj-benchmarks:test")?.mustRunAfter(":hkj-benchmarks:jmh")

    doLast {
        println("\n" + "=".repeat(70))
        println("  RELEASE READINESS — ALL CHECKS PASSED")
        println("=".repeat(70))
        println("\nAll quality gates passed (fast to slow):")
        println("  1. Spotless           — code formatting")
        println("  2. Build              — compile + unit tests + JaCoCo")
        println("  3. JMH Benchmarks     — performance benchmarks")
        println("  4. Benchmark Tests    — performance assertions")
        println("  5. Pitest (full)      — mutation testing (STRONGER mutators)")
        println("\nReports:")
        println("  - JaCoCo:     hkj-core/build/reports/jacoco/test/html/index.html")
        println("  - JMH JSON:   hkj-benchmarks/build/reports/jmh/results.json")
        println("  - JMH Human:  hkj-benchmarks/build/reports/jmh/human.txt")
        println("  - Pitest:     hkj-processor/build/reports/pitest/index.html")
    }
}

tasks.register<Exec>("pitestFull") {
    group = "verification"
    description = "Run pitest with full profile (STRONGER mutators, all CPU cores)"
    workingDir = rootProject.projectDir
    commandLine(
        if (System.getProperty("os.name").lowercase().contains("windows")) "gradlew.bat" else "./gradlew",
        ":hkj-processor:pitest",
        "-Ppitest.profile=full"
    )
    // Pitest is the slowest step — run it after everything else
    mustRunAfter(":hkj-benchmarks:test")
    doFirst {
        println("\nRunning pitest with FULL profile (STRONGER mutators, all CPU cores)")
    }
}